syntax = "proto3";
option csharp_namespace = "ComputingNodeGen";
package computing_node_service;


service ComputingNode {
  rpc GetInitialMatrix (GetInitialMatrixRequest) returns (stream MatrixItems);
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
  rpc SubmitResult (stream ResultPart) returns (Empty);
  rpc ReportNodeError (ReportNodeErrorRequest) returns (Empty);
}

message Empty {
  
}

message GetTaskRequest {
  repeated int64 preferredMatrixIds = 1;
}

message GetInitialMatrixRequest {
  int64 matrixId = 1;
}

message MatrixItems {
  bytes items = 1;
}

message PolynomPart {
  int32 power = 1;
  int32 coefficient = 2;
}

message GetTaskResponse {
  int64 taskId = 1;
  int64 initialMatrixId = 2;
  int32 column = 3;

  // Must be sorted in ascending order;
  repeated PolynomPart polynomParts = 4;
}

message ResultPart {
  int64 taskId = 1;
  //Without metadata!
  bytes data = 2;
}

message ReportNodeErrorRequest {
  int64 taskId = 1;
  string description = 2;
}
