syntax = "proto3";
option csharp_namespace = "TheOnlyGen";
package the_only_service;

service TheOnly {
  rpc GetInitialMatrix (GetInitialMatrixRequest) returns (stream GetInitialMatrixReply);
  rpc GetInitialMatrixRow (GetInitialMatrixRowRequest) returns (stream GetInitialMatrixReply);
  rpc GetInitialMatrixColumn (GetInitialMatrixColumnRequest) returns (stream GetInitialMatrixReply);
  rpc GetTask(GetTaskRequest) returns (GetTaskReply);
}

message GetInitialMatrixRequest {

}

message GetInitialMatrixRowRequest {
  int32 row = 1;
}

message GetInitialMatrixColumnRequest {
  int32 column = 1;
}

message GetInitialMatrixReply {
  repeated int32 items = 1;
}

message GetTaskRequest {
  optional int32 preferred_row = 2;
}

message GetTaskReply {
  int32 power = 1;
  int32 row = 2;
}

